# yml2block

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  RULES.md  pyproject.toml  template.yml  yml2block.py
.github/workflows/: tests_and_lints.yml
tests/: duplicate_name.yml  duplicate_top-level_key.yml  integration_tests.py  minimal_working_example.yml  typo_in_key.yml  unit_tests.py
tests/invalid/: display_order_duplicate.yml  display_order_non-int.yml  display_order_non-negative.yml  display_order_uncontiguous.yml  duplicate_datasetfield_name.tsv  duplicate_datasetfield_title.tsv  duplicate_datasetfield_title.yml  duplicate_top-level_key.yml  minimal_example.xlsx  nested_compound_metadata.tsv  nested_compound_metadata.yml  no_block_headers.tsv  one_block_header.tsv  too_many_block_headers.tsv  typo_in_keyword.tsv  whitespace_in_key.tsv  whitespace_in_key.yml
tests/snippets/: four_item_snippet.tsv  minimal_snippet.tsv  one_item_snippet.tsv  three_item_snippet.tsv
tests/valid/: duplicate_compound_titles.yml  explicit_empty_string_watermark.yml  minimal_working_example_expected.tsv  mixed_key_order.yml  nested_compound_metadata.tsv  nested_compound_metadata.yml
yml2block/: __init__.py  __main__.py  datatypes.py  output.py  prefix_analysis.py  rules.py  suggestions.py  tsv_input.py  validation.py  yaml_input.py  yml2block.py
